RESOLVED FIXED62861
Web Inspector: REGRESSION: Breakpoint is missed
https://bugs.webkit.org/show_bug.cgi?id=62861
Summary Web Inspector: REGRESSION: Breakpoint is missed
Andrey Adaikin
Reported 2011-06-17 06:37:38 PDT
A breakpoint on the last line of a <script>...</script> block is missed. For example: <script> console.log("TRY TO SET A BREAKPOINT HERE - IT IS OK"); console.log("TRY TO SET A BREAKPOINT HERE - IT WILL BE MISSED"); </script> The bug exists in Chrome 13.0.782.15 (Official Build 88529) dev, and Chrome v14
Attachments
Patch. (6.40 KB, patch)
2011-06-17 10:02 PDT, Pavel Podivilov
pfeldman: review+
Pavel Podivilov
Comment 1 2011-06-17 10:02:03 PDT
Andrey Adaikin
Comment 2 2011-06-17 10:40:34 PDT
View in context: https://bugs.webkit.org/attachment.cgi?id=97610&action=review > Source/WebCore/inspector/InspectorDebuggerAgent.cpp:267 > + if (breakpoint.lineNumber < script.startLine || script.endLine + 1 <= breakpoint.lineNumber) maybe: script.endLine < breakpoint.lineNumber ?
Andrey Adaikin
Comment 3 2011-06-17 10:42:19 PDT
btw, what about this case: <script> console.log("TRY TO SET A BREAKPOINT HERE");</script> ?
Pavel Podivilov
Comment 4 2011-06-21 03:30:42 PDT
Note You need to log in before you can comment on or make changes to this bug.