2011-06-17  Pavel Podivilov  <podivilov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: can't set breakpoint on the last script line.
        https://bugs.webkit.org/show_bug.cgi?id=62861

        * http/tests/inspector/debugger-test.js:
        (initialize_DebuggerTest):
        * inspector/debugger/debugger-pause-on-breakpoint-expected.txt:
        * inspector/debugger/debugger-pause-on-breakpoint.html:
2011-06-17  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: can't set breakpoint on the last script line.
        https://bugs.webkit.org/show_bug.cgi?id=62861

        * inspector/InspectorDebuggerAgent.cpp:
        (WebCore::InspectorDebuggerAgent::resolveBreakpoint):

Canonical link: https://commits.webkit.org/78661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89346 268f45cc-cd09-0410-ab3c-d52691b4dbfc